CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE_DIRECTORIES (. ${PCAP_INCLUDE_DIR} ${LIBNET_INCLUDE_DIR})

ADD_LIBRARY(wtftp STATIC wtftp.c)

TARGET_LINK_LIBRARIES (wtftp ${PCAP_LIBRARIES} ${LIBNET_LIBRARIES})

FIND_PACKAGE(Doxygen)
IF(DOXYGEN_FOUND)
        CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
        ADD_CUSTOM_TARGET(doc ${DOXYGEN_EXECUTABLE} 
                ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile 
                WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} 
                COMMENT "Generating API documentation with Doxygen" VERBATIM)
        INSTALL(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION share/doc)
ENDIF(DOXYGEN_FOUND)