INCLUDE_DIRECTORIES (. ${WTFTP_SOURCE_DIR} ${WTFTP_SOURCE_DIR}/lib ${PCAP_INCLUDE_DIR} ${LIBNET_INCLUDE_DIR} ${APR_INCLUDE_DIR} ${APRUTIL_INCLUDE_DIR})

ADD_EXECUTABLE (wtftpd wtftpd.c)

SET(REQUIRED_LIBRARIES ${PCAP_LIBRARIES} ${LIBNET_LIBRARIES} ${APRUTIL_LIBRARIES} ${APR_LIBRARIES})
IF(HAVE_WAPI)
	TARGET_LINK_LIBRARIES (wtftpd wapi wtftp ${REQUIRED_LIBRARIES}) 
ELSE(HAVE_WAPI)
	TARGET_LINK_LIBRARIES (wtftpd wtftp ${REQUIRED_LIBRARIES}) 
ENDIF(HAVE_WAPI)

TARGET_LINK_LIBRARIES (wtftpd ${APR_LIBRARIES}) 

INSTALL(TARGETS wtftpd RUNTIME DESTINATION bin)
